Updated the readme to include revision/learnings

--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -2,7 +2,16 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/01.md`
+I have revisited my knowledge on the usage of innerText/textcContent as well as
+innerHTML and found that textContent is preffered as it does not cause a reflow
+nor open up security risks.
+
+As for the use of append or appendChild then both do the same job although
+append enables the appending of multiple child elements.
+
+When querying the DOM for elements rather than using getElementById() I prefer
+using querySelector() as it allows for selecting all types of DOM elements and
+it's not restricted to just selecting id's.
 
 ## Background
 
